 Fix: ServerCLI no longer crashes upon receiving EOF from console.
 Fix: Fixed a rare case of hidden players being revealed (briefly) when their rank is changed.
 Fix: Fixed /Spectate leaving ghost players behind on world change (thanks Hellenion).
 Fix: Fixed a couple typos in WLock/WUnlock (thanks ImNoobSoWhat).
 Change: "/Import bans" no longer prints a message for every player who's already banned, instead showing a total number of already-banned players at the end.
 Change: Added a missing "Copy" context menu to the ServerGUI's log box (thanks to Jonty800).
 Change: fCraft front-ends now checks fCraft.dll's assembly version, and refuses to start if there is a mismatch (Thanks Zaneo).

0.623
 Fix: Fixed a crash in /PasteX and /PasteNotX.
 Fix: Fixed /BanInfo crash when given a non-banned IP address.
 Fix: Fixed a crash in Player.DetectChatSpam if AntiSpam was supposed to be disabled.
 Fix: Fixed typos in comments and messages (thanks Jonty800).
 Fix: Fixed a crash in /ZAdd (thanks thelonedrummer18).

0.622
 Feature: ServerGUI message log is now color-coded, easier to select/copy/paste, and featuring clickable links.
 Fix: Fixed several regressions in /Hide and /Spectate that were introduced in 0.620-0.621 (thanks mark_b).
 Fix: Fixed /Deafen being usable from console (thanks phonebookguy).
 Fix: Fixed a crash in Paste/PasteNot/PasteX/PasteNotX (thanks Grant).
 Misc: Updated some draw command messages, credits, help entries, warnings.

0.621
 Feature: Added CommandBook banlist (bans.csv) support to /Import.
 Feature: Added a way to list all players of a certain rank with "/Info @ClassName".
 Feature: Added {PLAYER_LIST} variable, for use in greetings/announcements/rules.
 Fix: Fixed changes to DefaultBackupInterval config key not being applied.
 Fix: Fixed /BanInfo showing "players on same IP" for players without a recorded IP address.
 Fix: Fixed fCraft occasionally using localized datetime and number formatting.