@@ -33,8 +33,8 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion( "0.6.2.4" )]
-[assembly: AssemblyFileVersion( "0.6.2.4" )]
+[assembly: AssemblyVersion( "0.6.3.0" )]
+[assembly: AssemblyFileVersion( "0.6.3.0" )]
 
 [assembly: CLSCompliant( true )]
 [assembly: NeutralResourcesLanguage( "en-US" )]
